GNOME Bugzilla – Bug 619499
'Open Folder' in Search for Files is a misleading option for folders and opens the parent directory
Last modified: 2010-09-29 05:32:04 UTC
"After using the standard graphical search tool in Ubuntu (Places > Search for files...) to search for files, you are shown a list of files and folders that match you description. Right-clicking on a file gives the option "Open" and "Open folder", which is very clear. The first will open the file, the second the containing folder. Right-clicking on a folder will give the same two options, "Open" and "Open folder". But in this case these options are confusing, because "Open folder" sounds like it will open the folder you are looking at, but does not--it opens the containing folder. It has happened to me often that I click "Open folder" without thinking, and get to where I do not want to be. All of the three following schemes seem clearer to me: 1. For folders, change "Open folder" to "Open containing folder". 2. For folders, change "Open" to "Open folder" and "Open folder" to "Open containing folder". 3. For folders, remove the option to open the containing folder altogether. (Unlike opening a file, opening a folder will take you the file manager anyway, where the containing folder is only a single mouse-click away.)" This bug was reported by Victor Gijsbers on Launchpad in Ubuntu at <https://launchpad.net/bugs/396966>.
Created attachment 169339 [details] [review] This patch addresses the bug.
As part of the patch I have also attempted to update the help file and the translation strings for gnome-search-tool. This was not mentioned in the bug specifically, but I thought it might be helpful, if I've done it correctly.
Review of attachment 169339 [details] [review]: Thanks for the patch. My preference would be to not special case the pop-up menu for folder. Instead, I would change the "Open Folder" menu item to "Open Containing Folder".
I want to keep the layout of the pop-up menu in gnome-search-tool as consistent as possible other applications in GNOME. 1. The Nautilus pop-up menu for a folder displays "Open". 2. The Firefox pop-up menu for downloads displays "Open" and "Open Containing Folder". I would propose for both files and folders that the search application display "Open" and "Open Containing Folder".
Created attachment 170464 [details] [review] Implemented modifications requested by Dennis Cranston Changes context menus for search results such that Folders now have "Open" to open the folder, and both Files and Folders have "Open Containing Folders". So, the language is now consistent. Updated the Help file to reflect the modified language. Also, updated ALL of the translation files that contain text relevant to the strings changed. Hopefully I've done what is expected in this regard.
Created attachment 170470 [details] [review] Full patch. Disregard previous one. Sorry, but I accidentally attached the wrong patch file. Apply this one instead :-)
Review of attachment 170470 [details] [review]: Great work Andrew. The patch can be applied as soon as gnome-utils branches for gnome-2-32.
I committed the above patch without the .po changes to the git repository.