mate-search-tool: open folder menu item can be misleading

Based on gnome-utils commits:
88159d1da89940d062057450e92aa191e364488b
b703b0b28e441c15c5416f01670b4b747768e980
From: Dennis Cranston <dennis_cranston@yahoo.com>
Gnome Bug: https://bugzilla.gnome.org/show_bug.cgi?id=619499